[package]
name = "disk-thrash"
version = "0.3.0"
edition = "2024"
authors = ["Trevor Sullivan <trevor@trevorsullivan.net>"]
license = "MIT"
description = "A tool to create arbitrary disk I/O load."

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
num_cpus = "1.16.0"
rand = "0.9.1"
uuid = { version = "1.16.0", features = ["v4"] }
ctrlc = "3.4.6"
lazy_static = "1.5.0"
